bug: stopped right panel overflowing and pushing the screen down

--- a/src/client/public/css/main.less
+++ b/src/client/public/css/main.less
@@ -85,6 +85,8 @@ body {
 		position: absolute;
 		right: 10px;
 		top: 94px;
+		max-height: calc(100% - 335px);
+		overflow: auto;
 	}
 
 	&.mobile {
